--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.2",
     "johnny-five": "^2.1.0",
     "nodemon": "^2.0.15",
+    "onoff": "^6.0.3",
     "socket.io": "^4.4.0"
   }
 }
